# orchestration

./: .airflowignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-2.yaml  docker-compose.yaml  orchestration-0.1.0-py3-none-any.whl  pyproject.toml  setup-dev.sh
.github/workflows/: artifact.yaml  pr.yaml  push_config.yaml
config/: README.md  config.json  config.jsonnet  config.yaml  configv2.yaml  filter.csv
config/datasets/: ot_gcp.yaml
config/step/: ot_colocalisation_coloc.yaml  ot_colocalisation_ecaviar.yaml  ot_eqtl_catalogue.yaml  ot_gene_index.yaml  ot_gwas_catalog_ingestion.yaml  ot_gwas_catalog_study_curation.yaml  ot_gwas_catalog_study_inclusion.yaml  ot_ld_based_clumping.yaml  ot_ld_index.yaml  ot_locus_to_gene_predict.yaml  ot_locus_to_gene_train.yaml  ot_variant_annotation.yaml  ot_variant_index.yaml  ot_variant_to_gene.yaml
config/step/session/: dataproc.yaml
docker/genetics_etl/: README.md
docs/: README.md
docs/datasources/: datasources.md
docs/datasources/eqtl_catalogue_data/: README.md
docs/datasources/finngen_data/: README.md
docs/datasources/gwas_catalog_data/: README.md
docs/datasources/gwas_catalog_sumstats_susie/: README.md
docs/datasources/ukb_ppp_eur_data/: README.md
docs/infrastructure/: dataproc.md
images/genetics_etl/: Dockerfile  README.md
images/gentropy/: Dockerfile
images/gentropy/scripts/: harmonise-sumstats.sh
orchestration/: __init__.py
orchestration/dags/: eqtl_preprocess.py  finngen_harmonisation.py  finngen_preprocess.py  genetics_etl.py  gnomad_preprocess.py  gwas_catalog_dag.py  gwas_catalog_harmonisation.py  gwas_catalog_preprocess.py  gwas_curation_update.py
src/: .airflowignore
src/ot_orchestration/: __init__.py  common_airflow.py  dynamic_dags.py  types.py
src/ot_orchestration/cli/: __init__.py  fetch_raw_sumstat_paths.py  generate_dotenv.py  process_in_batch.py
src/ot_orchestration/dags/: __init__.py  batch_example.py  branching.py  eqtl_catalogue_ingestion.py  eqtl_ingestion.py  eqtl_preprocess.py  finngen_finemapping_ingestion.py  finngen_harmonisation.py  finngen_ingesion.py  finngen_ingestion.py  finngen_preprocess.py  finngen_ukb_meta_harmonisation.py  genetics_dag.py  genetics_etl.py  gnomad_ingestion.py  gnomad_preprocess.py  gwas_catalog_dag.py  gwas_catalog_dagv2.py  gwas_catalog_harmonisation.py  gwas_catalog_pipeline.py  gwas_catalog_preprocess.py  gwas_catalog_sumstat_harmonisation.py  gwas_catalog_sumstats_pics.py  gwas_catalog_sumstats_susie_clumping.py  gwas_catalog_sumstats_susie_finemapping.py  gwas_catalog_top_hits.py  gwas_curation_update.py  platform.py  platform_input_support.py  ukb_ppp_eur_finemapping.py  ukb_ppp_eur_harmonisation.py  ukb_ppp_eur_ingestion.py  ukb_ppp_finemapping.py  unified_pipeline.py
src/ot_orchestration/dags/config/: eqtl_catalogue_ingestion.yaml  eqtl_ingestion.yaml  etl.conf  finngen_ingestion.yaml  finngen_ukb_meta_harmonisation.yaml  genetics_etl.yaml  gnomad_ingestion.yaml  gwas_catalog_harmonisation.yaml  gwas_catalog_pipeline.yaml  gwas_catalog_preprocess.yaml  gwas_catalog_sumstat_harmonisation.yaml  gwas_catalog_sumstats_pics.yaml  gwas_catalog_sumstats_susie_clumping.yaml  gwas_catalog_sumstats_susie_finemapping.yaml  gwas_catalog_top_hits.yaml  pis.yaml  platform.py  platform.yaml  ukb_ppp_eur_finemapping.yaml  ukb_ppp_eur_harmonisation.yaml  ukb_ppp_eur_ingestion.yaml  unified_pipeline.py
src/ot_orchestration/operators/: __init__.py  cloud_run.py  cloud_run_fetch_logs_operator.py  dataproc.py  finemapping.py  gce.py  gcs.py  manifest_operators.py  platform.py  unified_pipeline.py  vep.py
src/ot_orchestration/operators/batch/: __init__.py  batch_index.py  finemapping.py  harmonisation.py  vep.py
src/ot_orchestration/operators/batch/manifest_generators/: __init__.py  harmonisation.py
src/ot_orchestration/scripts/: __init__.py  generate_dotenv.py
src/ot_orchestration/task_groups/: __init__.py  curation.py  setup.py
src/ot_orchestration/task_groups/gwas_catalog/: __init__.py  batch_processing.py  curation.py  harmonisation.py  manifest_preparation.py
src/ot_orchestration/templates/: finemapping.py
src/ot_orchestration/utils/: __init__.py  batch.py  cloud_run.py  common.py  dataproc.py  dataproc_platform.py  gcs_path.py  labels.py  manifest.py  path.py  qrcp.py  utils.py
src/task_groups/: curation.py
tasks/: harmonise.sh
tests/: conftest.py  test_common.py  test_config_parser.py  test_dag.py  test_dag_validation.py  test_dataproc.py  test_gsc_path.py  test_gwas_catalog_batch_job.py  test_io_manager.py  test_manifest.py  test_path.py  test_time_to_seconds.py  test_utils.py
tests/data/gwas_catalog_batch_job/: SSF_GCST001.h.tsv  manifest.json
